# my_health_diary

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  init_dev.sh  logrotate.sh  manage.py  pyproject.toml
apps/authentication/: forms.py  urls.py  views.py
apps/core/: admin.py  models.py  utils.py  validators.py
apps/core/migrations/: 0001_initial.py
conf.d/backend/: Dockerfile
conf.d/celery/: Dockerfile
conf.d/my_health_diary/: Dockerfile
conf.d/nginx/: mhd_dev.conf
my_health_diary/: __init__.py  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/authentication/: register.html  register_done.html
